update: 扩展 Java 系列—并发编程(volatile/CAS/AQS/ReentrantLock/ThreadLocal/线程池)、JVM(运行时数据区/类加载/GC/调优)、Spring(IOC/AOP/事务/自动配置/MVC)
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>